# streamlit-chatgpt-ui-openai-v1

./: .env-template  .gitignore  README.md  app-azureai.py  app-fuploadonly.py  app.py  applocal.py  pyproject.toml
