[tool.poetry]
name = "streamlit-chatgpt-ui-openai-v1"
version = "0.1.0"
description = ""
authors = ["Shuichi_Kataoka <shu01k9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.1"
streamlit = "^1.29.0"
streamlit-chat = "^0.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
